# structured-output-performance

./: .env.example  .gitignore  README.md  pyproject.toml  structured_output_performance.ipynb
